Fix countdowns css and overlapping behavior (#151)
* adjust css for countdown in projectors

* fix countdowns stacking on top of each other

* fix formatting via nodelinter

* change data-projection-id to data-id, passes linting

* add overlay.js helper, more generic projection handling

* remove redundant field in countdown handler and contains helper function in projector.go

* typo fix

* Update templates/projector-content.html

rename countdown-container to overlay-container class


* change countdown-container to overlay-container, adjust template logic and js restrict to direct children

* remove position attribute for countdown fullscreen class

* add back line spacing prettier removed in projector-content.html

---------

--- a/web/src/projector.css
+++ b/web/src/projector.css
@@ -39,7 +39,7 @@ body {
   justify-content: space-between;
   position: relative;
   z-index: 10;
-  height: 70px;
+  height: 60px;
   padding: 0 50px;
   box-shadow: 0 0 7px rgba(0, 0, 0, 0.6);
   background-repeat: no-repeat;
